--- a/src/components/EditarPraia/styles.css
+++ b/src/components/EditarPraia/styles.css
@@ -7,10 +7,9 @@
     padding:15px;
     text-align:center;
 }
-.btn{
-    font:16px;
-    height:70px;
-    width:90px;
-    margin:20px;
-
+.red{
+    color:red;
+}
+.green{
+    color:green;
 }
