--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -5,9 +5,22 @@ button{
     border-radius: 8px;
     width:40px;
     height:70px;
-    margin:auto;
+    margin:30px;
+    display:inline-flex;
    
 }
 button:hover{
     background-color:bisque; 
     color:rgb(57, 151, 151);}
+
+.del{
+    height:40px;
+    width:90px;
+    font-size: 22px;
+    display:inline-flex;
+   
+}
+.botoes{
+    display: flex;
+    align-items: center;
+}
