--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 Body{
-  color:rgb(57, 151, 151)
+  color:rgb(57, 151, 151);
+  margin:30px auto;
+  padding: 7px;
 }
 .container{
   display: flex;
